// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Certificação — regressão industrial (snapshots) > furação europeia na lateral — apenas cavilhas + rasgo (sem Ø5) 1`] = `
[
  {
    "face": "A",
    "x": 8,
    "y": 15,
  },
  {
    "face": "A",
    "x": 8,
    "y": 412,
  },
  {
    "face": "A",
    "x": 490,
    "y": 15,
  },
  {
    "face": "A",
    "x": 490,
    "y": 415,
  },
]
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=1 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 540,
  "bodyWidth": 548,
  "height": 720,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 0,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=2 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 245.23000000000002,
  "bodyWidth": 548,
  "height": 358,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -181,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=2 > gera peças, dimensões e offsets consistentes 2`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 268.5,
  "bodyWidth": 548,
  "height": 358,
  "index": 1,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 181,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=3 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 162.57333333333335,
  "bodyWidth": 548,
  "height": 237.33333333333334,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -241.33333333333331,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=3 > gera peças, dimensões e offsets consistentes 2`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 178,
  "bodyWidth": 548,
  "height": 237.33333333333334,
  "index": 1,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 1.4210854715202004e-14,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=3 > gera peças, dimensões e offsets consistentes 3`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 178,
  "bodyWidth": 548,
  "height": 237.33333333333334,
  "index": 2,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 241.33333333333337,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 121.245,
  "bodyWidth": 548,
  "height": 177,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -271.5,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 2`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 132.75,
  "bodyWidth": 548,
  "height": 177,
  "index": 1,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -90.5,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 3`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 132.75,
  "bodyWidth": 548,
  "height": 177,
  "index": 2,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 90.5,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 4`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 132.75,
  "bodyWidth": 548,
  "height": 177,
  "index": 3,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 271.5,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;
